--- a/README
+++ b/README
@@ -15,15 +15,13 @@ Default directory for storing images is /var/lib/libvirt/images. If you want to 
 !!! It's strongly recommended to set your own fedora installation repository because the default one is extremelly slow. Mirrors list is here: http://mirrors.fedoraproject.org/publiclist/Fedora/15/x86_64/"
 !!! Just remember that the selected repository address must end with .../x86_64/os - for example http://dl.fedoraproject.org/pub/fedora/linux/releases/15/Fedora/x86_64/os/
 
--Run as root following commands in this order:
-	1) ./ipa-base-prepare.sh --createbase --repo $repository_address
-	2) ./ipa-base-prepare.sh --installipa
-	3) ./ipa-demo.sh
+-Run as root following command:
+	./ipa-demo.sh
 
 Those commands will create evironment containing three virtual machines(one with freeipa-server, two with freeipa-client) with freeipa fully configured and ready for use.
 Each virtual machine is configured to use 1 cpu and 1 GB ram.(This environment will be considered as reference for further definition of requirements) We are using Qcow2 image format with dynamically growing size. Each image's size can grow up to 10GB. If you want to install additional packages to any VM, watch your free space.
 
-There was problem on one machine with running the scripts in home directory(it denied access to images). It was necessary run the script from different directory('/root' for example).
+There was problem on one machine with running the scripts in home directory(it denied access to images). In such case set permissions to 'o+x' on each directory that contains (should contain) the images.
 
 HW Requirements:
 10GB of disk free space( if you get/download/whatever 'installation ready' base image without need of using ipa-base-prepare, then you need about 7GB of free disk space)
